--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -96,7 +96,7 @@ jobs:
         if: success()
         run: |
           # Génère la doc HTML pour le module 'scripts' et la place dans 'site/docs'
-          pdoc --html scripts -o site/docs
+          pdoc scripts -o site/docs
           
       - name: Deploy to GitHub Pages
         if: success()
