ci: modification de la partie  pour specifier les fichier a lire par pdoc

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -96,7 +96,7 @@ jobs:
         if: success()
         run: |
           # Génère la doc HTML pour le module 'scripts' et la place dans 'site/docs'
-          pdoc scripts -o site/docs
+          pdoc scripts/train.py scripts/evaluate.py scripts/deploy.py -o site/docs
           
       - name: Deploy to GitHub Pages
         if: success()
